--- a/client/index.html
+++ b/client/index.html
@@ -561,10 +561,21 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   </div>
   <section class="youtube-prompt-section">
     <div class="youtube-video-container" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
-      <div id="youtube-placeholder"
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer; background: url('https://img.youtube.com/vi/MPevL0xPZ9c/hqdefault.jpg') center center / cover no-repeat;">
-        <div
-          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0,0,0,0.6); border-radius: 50%; padding: 12px;">
+      <div id="youtube-placeholder" style="
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      cursor: pointer;
+      background: url('https://img.youtube.com/vi/H_aOWlPujIg/hqdefault.jpg')
+                  center center / cover no-repeat;
+    ">
+        <div style="
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(0,0,0,0.6);
+        border-radius: 50%; padding: 12px;
+      ">
           <svg width="40" height="40" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
             <path d="M8 5v14l11-7z" />
           </svg>
@@ -572,24 +583,32 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       </div>
     </div>
 
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const placeholder = document.getElementById("youtube-placeholder");
         placeholder.addEventListener("click", function () {
           const iframe = document.createElement("iframe");
-          iframe.setAttribute("src", "https://www.youtube.com/embed/MPevL0xPZ9c?autoplay=1");
+          iframe.setAttribute(
+            "src",
+            "https://www.youtube.com/embed/H_aOWlPujIg?autoplay=1"
+          );
           iframe.setAttribute("frameborder", "0");
-          iframe.setAttribute("allow", "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture");
+          iframe.setAttribute(
+            "allow",
+            "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          );
           iframe.setAttribute("allowfullscreen", "");
-          iframe.style.width = "100%";
-          iframe.style.height = "100%";
-          iframe.style.position = "absolute";
-          iframe.style.top = "0";
-          iframe.style.left = "0";
+          iframe.style.cssText = `
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+      `;
           placeholder.replaceWith(iframe);
         });
       });
     </script>
+
     <p class="hero-text">
       Watch how it works — in under 60 seconds.
     </p>
