Updated Offer Page Copy

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -726,11 +726,11 @@
     <div class="modal-content">
       <span class="close">&times;</span>
 
-      <h2>✨ Your custom plan is ready — here’s how it works</h2>
+      <h2 id="valueModalHeader">🎉 , you've been selected to get your first month <strong>FREE</strong></h2>
 
       <p class="subtext">
-        <strong>Most plans fail because they’re too rigid.</strong><br>
-        This one changes with you — based on your real results.
+        <strong>Your custom plan is ready.</strong><br>
+        This isn’t a rigid template — it evolves with you based on your progress.
       </p>
 
       <ul class="feature-list">
@@ -740,18 +740,18 @@
       </ul>
 
       <p class="note">
-        💡 This isn’t a fixed plan. It’s a <strong>smart tracker</strong> that keeps you moving forward.
+        💡 This isn’t a fixed plan. It’s a <strong>smart tracker</strong> that adapts as you go.
       </p>
 
       <div class="modal-actions">
-        <button id="valueContinue" class="primary-btn">Continue</button>
+        <button id="valueContinue" class="primary-btn">Get Started for 99p</button>
         <a id="valueDemo" href="https://www.youtube.com/shorts/H_aOWlPujIg" target="_blank" rel="noopener"
           class="secondary-btn">
           Watch&nbsp;Demo
         </a>
       </div>
       <p class="urgency-note">
-        ⏱️ <strong>Claim your plan before the discount ends.</strong>
+        ⏳ <strong>This offer is only valid for a limited time — claim it now before it expires.</strong>
       </p>
       <!-- <p class="skip-link">
         <a href="#" id="valueSkip">No thanks, just take me to the plan</a>
