Fixed Payment Bugs

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -726,7 +726,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
 
-      <h2 id="valueModalHeader">🎉 , you've been selected to get your first month <strong>FREE</strong></h2>
+      <h2 id="valueModalHeader">🎉 , you've been selected — start now for just 99p</h2>
 
       <p class="subtext">
         <strong>Your custom plan is ready.</strong><br>
