Fixed Payment Bugs + Offer Modal Copy

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -729,8 +729,8 @@
       <h2 id="valueModalHeader">🎉 , you've been selected — start now for just 99p</h2>
 
       <p class="subtext">
-        <strong>Your custom plan is ready.</strong><br>
-        This isn’t a rigid template — it evolves with you based on your progress.
+        <strong>Only 1% of users unlock this discount — congrats!</strong><br><br>
+        Your custom plan is ready. This isn’t a rigid template — it evolves with you based on your progress.
       </p>
 
       <ul class="feature-list">
