Offer Section Improvements

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -25,7 +25,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Claim your program</title>
+  <title>Claim my plan</title>
   <!-- 1️⃣  LOAD the real Stripe SDK first (blocks parsing, 30 ms) -->
   <script src="https://js.stripe.com/v3/"></script>
 
@@ -125,7 +125,7 @@
       Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
       <strong>get fit faster</strong>.
       <a href="#compare-plans" id="comparePlansLink0" class="compare-pill">
-        👀 See how it compares
+        🔎 See how it compares
       </a>
     </p>
 
@@ -295,7 +295,7 @@
 
 
     <p class="testimonial-disclaimer">
-      Results may vary. This transformation was achieved using the <strong>Pro Tracker</strong>, part of our tailored
+      Results may vary. This transformation was achieved using the <strong>12-Week Plan</strong>, part of our tailored
       training system.
     </p>
   </div>
@@ -303,7 +303,7 @@
   <div class="floating-cta-container" id="floatingCtaContainer">
     <div class="floating-cta -cta" id="floating-cta">
       <button id="claimProgramBtn" class="claim-program-btn">
-        Claim Your Program
+        Claim My Plan
       </button>
     </div>
   </div>
@@ -321,14 +321,28 @@
     </div>
 
     <!-- Offer Cards -->
+    <section id="socialProof" class="social-proof">
+       <img
+    src="../assets/muscular-silhouette.png"
+    alt="Meet Your Coach"
+    class="social-proof__coach"
+  />
+      <p class="social-proof__headline">
+        947 people bought workout plans in the last hour
+      </p>
+      <div class="social-proof__recent">
+        <span class="social-proof__tag">ava 12-Week Plan</span>
+        <span class="social-proof__tag">ethan 12-Week Plan</span>
+      </div>
+    </section>
     <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
     <p class="plan-diff-text">
-      <strong>No other app does what we do.</strong><br>
-      Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
-      <strong>get fit faster</strong>.
+      Other apps just track.
+       <strong>We use what you track to adapt workouts & meals</strong> so you
+      <strong>get fit faster</strong>.<br>
 
       <a href="#" id="comparePlansLink" class="compare-pill">
-        👀 See how it compares
+        🔎 See how it compares
       </a>
     </p>
     <!-- <p class="offer-subtext">Most people never stick to fitness because their plan doesn’t adapt. Yours will.
@@ -448,7 +462,7 @@
         </div>
 
         <div class="toggle-details" id="toggle-new" style="cursor:pointer;">
-          See more
+          What’s Included?
         </div>
       </div>
 
@@ -464,27 +478,17 @@
       </div>
 
       <p class="final-reassurance" id="offerDisclaimer">
-        Try the <strong>Pro Tracker</strong> risk-free. Cancel anytime — no commitment, no hidden fees.
+        Try the 12-Week Plan risk-free. Cancel anytime — no commitment, no hidden fees.
       </p>
 
       <p class="offer-disclaimer">
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the Pro Tracker, it renews at £29.99/month unless cancelled. Cancellations take
+        If you choose the 12-Week Plan, it renews at £29.99/month unless cancelled. Cancellations take
         effect at the end of the current billing cycle.
       </p>
 
-  </section>
-
-  <section id="socialProof" class="social-proof" style="display: none;">
-    <p class="social-proof__headline">
-      947 people bought workout plans in the last hour
-    </p>
-    <div class="social-proof__recent">
-      <span class="social-proof__tag">ava – Pro Tracker</span>
-      <span class="social-proof__tag">ethan – Pro Tracker</span>
-    </div>
   </section>
 
   <section id="loadingSection" class="loading-section" style="display: none;">
@@ -515,7 +519,7 @@
         </p>
         <p id="postPayNote" class="post-pay-note"
           style="display:none; text-align:center; margin-top:12px; color:#2a7f2a; font-weight:500;">
-          ✅ After payment, your 12-week program is unlocked immediately. You'll be taken straight to your dashboard to
+          ✅ After payment, your 12-Week Plan is unlocked immediately. You'll be taken straight to your dashboard to
           get
           started.
         </p>
@@ -644,7 +648,7 @@
       <span class="close">&times;</span>
 
       <h2>Compare Plans</h2>
-      <p class="subtext">Here's what you unlock when using our Pro Tracker.</p>
+      <p class="subtext">Here's what you unlock when using our 12-Week Plan.</p>
 
       <div class="table-wrapper">
         <table class="compare-table">
@@ -657,7 +661,7 @@
             <tr>
               <th>Feature</th>
               <th>Most Apps</th>
-              <th>Pro Tracker</th>
+              <th>Raising The Bar</th>
             </tr>
           </thead>
           <tbody>
@@ -716,8 +720,8 @@
       </div>
 
       <p class="testimonial">
-        “I didn’t realize how much I was missing until I unlocked Pro Tracker. It made everything click.”<br>
-        – Alice, lost 7 kg with Pro
+        “I didn't realize how much I was missing until I unlocked the 12-Week Program. It made everything click.”
+        - Alice, lost 7 kg
       </p>
     </div>
   </div>
