Offer Modal + WI2 Improvements

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -733,8 +733,8 @@
       <h2 id="valueModalHeader">🎉 , you've been selected — start now for just 99p</h2>
 
       <p class="subtext">
-        <strong>Only 1% of users unlock this discount — congrats!</strong><br><br>
-        Your custom plan is ready. This isn’t a rigid template — it evolves with you based on your progress.
+        <strong>Most plans fail because they're too rigid</strong><br><br>
+        This one adapts as you go - based on your real results.
       </p>
 
       <ul class="feature-list">
@@ -748,14 +748,14 @@
       </p>
 
       <div class="modal-actions">
-        <button id="valueContinue" class="primary-btn">Get Started for 99p</button>
+        <button id="valueContinue" class="primary-btn">Continue</button>
         <a id="valueDemo" href="https://www.youtube.com/shorts/H_aOWlPujIg" target="_blank" rel="noopener"
           class="secondary-btn">
           Watch&nbsp;Demo
         </a>
       </div>
       <p class="urgency-note">
-        ⏳ <strong>This offer is only valid for a limited time — claim it now before it expires.</strong>
+        ⏳ <strong>Claim your plan before the discount ends.</strong>
       </p>
       <!-- <p class="skip-link">
         <a href="#" id="valueSkip">No thanks, just take me to the plan</a>
