Updated Offer Page Copy

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -720,7 +720,7 @@
       </div>
 
       <p class="testimonial">
-        “I didn't realize how much I was missing until I unlocked the 12-Week Program. It made everything click.”
+        “I didn't realize how much I was missing until I unlocked the 12-Week Plan. It made everything click.”
         - Alice, lost 7 kg
       </p>
     </div>
