Improved Payment Section

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -322,11 +322,7 @@
 
     <!-- Offer Cards -->
     <section id="socialProof" class="social-proof">
-       <img
-    src="../assets/muscular-silhouette.png"
-    alt="Meet Your Coach"
-    class="social-proof__coach"
-  />
+      <img src="../assets/muscular-silhouette.png" alt="Meet Your Coach" class="social-proof__coach" />
       <p class="social-proof__headline">
         947 people bought workout plans in the last hour
       </p>
@@ -338,7 +334,7 @@
     <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
     <p class="plan-diff-text">
       Other apps just track.
-       <strong>We use what you track to adapt workouts & meals</strong> so you
+      <strong>We use what you track to adapt workouts & meals</strong> so you
       <strong>get fit faster</strong>.<br>
 
       <a href="#" id="comparePlansLink" class="compare-pill">
@@ -497,9 +493,11 @@
 
   <div class="payment-wrapper">
     <!-- this is the overlay rectangle -->
-    <div class="payment-overlay"></div>
+    <!-- <div class="payment-overlay"></div> -->
 
     <section id="paymentSection" class="payment-section" style="display:none">
+      <span id="paymentCloseBtn" class="payment-close">&times;</span>
+
       <form id="paymentForm">
         <div id="paymentElement"></div>
         <!-- Plan + price -->
